tests/ast_interpreter/err_string_repetition_overflow.expected
<string>:4:15: error: string repetition result too large
    print(str * 999999999999999999);
              ^
