tests/ast_interpreter/err_string_repetition_overflow.nx
fun main() {
    // This should trigger overflow check: trying to allocate huge string
    var str = "This is a reasonably long string that will overflow when multiplied";
    print(str * 999999999999999999);
}
